--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -361,7 +361,7 @@ background: rgb(252, 255, 249);
  color: rgb(67, 169, 67);
 }
 .text-success-500{
- color: rgb(20, 148, 20);
+ color: #149414;
 }
 .text-success-600{
  color: rgb(18, 135, 18);
