--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -41,7 +41,7 @@ body {
   background: rgb(183, 239, 112);
 }
 .bg-primary-500{
-  background: rgb(165, 235, 76);
+  background: #a5eb4c;
 }
 .bg-primary-600{
   background: rgb(150, 214, 69);
