--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -44,7 +44,7 @@ body {
   background: #a5eb4c;
 }
 .bg-primary-600{
-  background: rgb(150, 214, 69);
+  background: #96d645;
 }
 .bg-primary-700{
   background: rgb(117, 167, 54);
