--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -47,13 +47,13 @@ body {
   background: #96d645;
 }
 .bg-primary-700{
-  background: rgb(117, 167, 54);
+  background: #75a736;
 }
 .bg-primary-800{
   background: rgb(91, 129, 42);
 }
 .bg-primary-900{
-  background: rgb(69, 99, 32);
+  background: #456320;
 }
 /* Text */
 .text-primary-50{
